update resume + added award

--- a/index.html
+++ b/index.html
@@ -75,13 +75,14 @@
 					<ul>
 						<li class="active"><a href="#" data-nav-section="home">Home</a></li>
 						<li><a href="#" data-nav-section="about">About</a></li>
-						<li><a href="#" data-nav-section="services">Soft Skills</a></li>
-						<li><a href="#" data-nav-section="skills">Skills</a></li>
+						<li><a href="#" data-nav-section="services">Overall Skills</a></li>
+						<li><a href="#" data-nav-section="skills">Technical Skills</a></li>
 						<li><a href="#" data-nav-section="education">Education</a></li>
 						<li><a href="#" data-nav-section="experience">Experience</a></li>
 						<li><a href="#" data-nav-section="texperience">Teaching Experience</a></li>
 						<li><a href="#" data-nav-section="project" onclick="setTimeout(filterSelection('all'), 3000)">projects</a></li>
 						<li><a href="#" data-nav-section="presentations">Presentations</a></li>
+						<li><a href="#" data-nav-section="awards">Awards</a></li>
 						<li><a href="#" data-nav-section="blog">Blog</a></li>
 						<li><a href="#" data-nav-section="contact">Contact</a></li>
 					</ul>
@@ -187,9 +188,9 @@
 			<section class="colorlib-services" data-section="services">
 				<div class="colorlib-narrow-content">
 					<div class="row">
-						<div class="col-md-8 col-md-offset-2 col-md-pull-2 animate-box" data-animate-effect="fadeInLeft">
+						<div class="col-md-10 col-md-offset-2 col-md-pull-2 animate-box" data-animate-effect="fadeInLeft">
 							<span class="heading-meta">What I do?</span>
-							<h2 class="colorlib-heading">Here are some of my soft skills</h2>
+							<h2 class="colorlib-heading">Here are some of my overall skills</h2>
 						</div>
 					</div>
 					<div class="row row-pt-md">
@@ -236,12 +237,12 @@
 					<div class="row">
 						<div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
 							<span class="heading-meta">My Specialty</span>
-							<h2 class="colorlib-heading animate-box">My Skills</h2>
+							<h2 class="colorlib-heading animate-box">My Technical Skills</h2>
 						</div>
 					</div>
 					<div class="row">
 						<div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
-							<p>My skills are devided into three sections: Professional, Intermediate, and Familiar. The skills in Professional section are thetools that I'm working with regularly.</p>
+							<p>My skills are divided into three sections: Professional, Intermediate, and Familiar. The skills in the Professional section are the tools that I'm working with regularly.</p>
 						</div>
 						<div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
 							<h4>Professional</h4>
@@ -383,7 +384,15 @@
 										  <br>
 										  GPA: 4.07 (Out of 4.3), via 12 credit
 										  <br> 
-										  Thesis: Multi-task learning with deep language models
+										  Thesis: Developing a CLI tool for Multi-head and Multi-task learning with deep language models
+										  <br>
+										  <b>Courses:</b>
+										  <ul>
+											  <li>Advanced topics in NLP: A+ </li>
+											  <li>Deep Learning: A</li>
+											  <li>Machine Learning: A-</li>
+											  <li>Visual Analytics: A+</li>
+										  </ul>											
 									  </p>
 					               </div>
 					            </div>
@@ -400,6 +409,8 @@
 					                  <p>Shiraz University, Shiraz, Iran.
 										  <br>
 										  GPA: 16.11 (out of 20), via 141 credit
+										  <br> 
+										  Senior Project: Kitchen safety (IOT project)
 									  </p>
 					               </div>
 					            </div>
@@ -452,6 +463,8 @@
 					               	<h2><a href="#">Data Analyst</a> <span>Aug 2018 – Feb 2019</span></h2>
 					                  <p>
 											<b><a href="https://www.linkedin.com/company/ayten/">Ayten Company</a>, Shiraz, Iran</b>
+											<br>
+											This comany is mostly focused on Software development and R&D projects.  
 											<br> 
 											Detailed achievements and working experience:
 											<ul>
@@ -472,7 +485,9 @@
 					               <div class="timeline-label">
 					               	<h2><a href="#">Linux Instructor</a> <span>Jun 2015 – Aug 2016</span></h2>
 					                  <p>
-										  <b>Joyandegane Parto Nor Sadegh, Shiraz, Iran</b>
+										  <b>Joyandegane Parto Nor Sadegh Company, Shiraz, Iran</b>
+										  <br>
+										  This compnay is mostly focused on programming boards(Raspberry Pi) and developing IOT projects. 
 										  <ul>
 											  <li>First started as an intern and then was selected to be the lead training sessions.</li>
 											  <li>Topics included: UNIX vs Linux, file manipulation on terminal, kernel description, file system, shell scripting, system administration and network basics, version controls.</li>
@@ -655,7 +670,7 @@
 										   <ul>
 											   <li>Improving the fine-tunning algorithm of pre-trained language model</li>
 											   <li>Developing with Python, PyTorch, hugging face libraries, and MLflow.</li>
-											   <li>Team project</li>
+											   <li>Team project (Collaboration with a PhD student)</li>
 										   </ul>
 										 </p>
 									  </div>
@@ -671,7 +686,7 @@
 										 <p><b><a href="https://www.dal.ca/faculty/computerscience.html">Dalhousie University</a>, Halifax, Canada </b>
 										   <ul>
 											   <li>Dataset is from the TREC-COVID competition</li>
-											   <li>Working in this project as a Team.</li>
+											   <li>Working in this project as a Team (Collaboration with 2 MCS students)</li>
 											   <li>Using unsupervised fine-tunning and Siamese network to train T5 model for
 												finding related papers to a query.</li>
 										   </ul>
@@ -690,7 +705,7 @@
 												<p>
 													<ul>
 														<li>Course Project for Natural Language Processing(NLP) Course</li>
-														<li>Team Project</li>
+														<li>Team Project (collaboration with a PhD student)</li>
 														<li>Used different scoring functions to extract most important sentences of a document</li>
 														<li><a href="files/nlpproject.pdf">Download Project Report</a></li>
 													</ul>
@@ -723,7 +738,7 @@
 											 <p>
 											   <ul>
 												   <li>Course Project for Deep Learning Course</li>
-												   <li>Team Project</li>
+												   <li>Team Project (collaboration with 2 MCS students)</li>
 												   <li>Used BERT embeddings to classify the type of harrasment of each tweet in a imbalanced twitter dataset.</li>
 												   <li><a href="files/Classification_of_imbalanced_dataset_using_BERT_embedding.pdf">Download Project Report</a></li>
 											   </ul>
@@ -754,7 +769,7 @@
 											 <p>
 											   <ul>
 												   <li>Course Project for Deep Learning Course</li>
-												   <li>Team Project</li>
+												   <li>Team Project (Collaboration with 2 MCS students)</li>
 												   <li>Developed a visualization system using D3 to demonstrate the semantic similarity of words.</li>
 												   <li><a href="files/Classification_of_imbalanced_dataset_using_BERT_embedding.pdf">Download Project Report</a></li>
 												   <li>Although We used the same dataset for this project and the deep learning course, the methogologies and purpose of the projects are completly different. </li>
@@ -788,16 +803,8 @@
 												   <li><a href="https://github.com/fatemerhmi/iot_temp_humidity">GitHub</a></li>
 											   </ul>
 											   <b>Descripiton:</b>
-												This project is designed to give a hand to people who work in the kitchen such as, people working in the 
-												kitchens of grand hotels, where the matter of temperature and heat turns out to be essential. They have 
-												giant refrigerators, freezers, huge kitchen, and a couple of storage to be taken care of.
-												To make sure that each section is being in an appropriate situation and the systems are functioning 
-												correctly, this project is designed to monitor a system to prevent any damage that might happen to these workers.
-												In this system, there exists a temperature and humidity sensor, the information which is receiving 
-												from the environment will be sent out through a Wi-Fi module to a web server, the web server will store 
-												the data. The user can access theses information from a website. There is also the feature of setting temperature 
-												of humidity limit so that the website can give the user some information about the history of the status 
-												and also email the user if any change accrued that went below the limit. 
+											   This project is designed to assist people who work in the kitchen such as, the kitchens of grand hotels, where the matter of temperature and heat turns out to be essential. They have giant refrigerators, freezers, a huge kitchen, and a couple of storage to be taken care of. To make sure that each section is being in an appropriate situation and the systems are functioning correctly, this project is designed to monitor a system to prevent any damage that might happen to these workers.
+											   In this system, a temperature and humidity sensor is located in the kitchen. The information that is being received from the environment will be sent out through a Wi-Fi module to a web server, the web server will store the data. Then users can watch theses information from the project website. This website also makes it available for the user to set a threshold in which the kitchen should not increase or decrease. If any change occurred out of the given threshold, the user will immediately be notified with an email. The history of the kitchen's temperature is also available to view anytime on the website. 
 											 </p>
 										  </div>
 									   </div>
@@ -1027,7 +1034,7 @@
 									  <i class="fas fa-chalkboard-teacher"></i>
 								   </div>
 								   <div class="timeline-label">
-									   <h2><a href="#">Women in Machine Learning and Data Science (WiMLDS)</a> <span>Feb 2020</span></h2>
+									   <h2><a href="#">Women in Machine Learning and Data Science (<a style="color:#2c98f0" href="https://wimlds.org">WiMLDS</a>), Halifax Chapter</a> <span>Feb 2020</span></h2>
 									  <p>
 										  I gave a talk about how we can use deep language models to perform text summarization in the <a href="https://www.linkedin.com/posts/fatemehrahimi_women-in-machine-learningdata-science-meetup-activity-6639208170579382273-6CFZ">WiMLDS meetup</a>.
 										  <br>
@@ -1051,6 +1058,79 @@
 					               </div>
 					            </div>
 					         </article>
+					      </div>
+					   </div>
+				   </div>
+				</div>
+			</section>
+			<section class="colorlib-education" data-section="awards">
+				<div class="colorlib-narrow-content">
+					<div class="row">
+						<div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
+							<span class="heading-meta">Awards</span>
+							<h2 class="colorlib-heading animate-box">Awards</h2>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-md-12">
+				         <div class="timeline-centered">
+							 <article class="timeline-entry animate-box" data-animate-effect="fadeInLeft">
+								<div class="timeline-entry-inner">
+								   <div class="timeline-icon color-3">
+									  <i class="fas fa-awardfas fa-award"></i>
+								   </div>
+								   <div class="timeline-label">
+									   <h2>Awarded the support for attending virtual Grace Hopper Celebration (vGHC) 2020 <span>Sep 2020</span></h2>
+									  <p>
+										The Culture of Respect Committee in Computer Science (CoReCS) of Dalhousie Faculty of Computer Science awarded me the support to attend the virtual Grace Hopper Celebration (vGHC) 2020. 
+									  </p>
+								   </div>
+								</div>
+							 </article>
+							 <article class="timeline-entry animate-box" data-animate-effect="fadeInLeft">
+								<div class="timeline-entry-inner">
+								   <div class="timeline-icon color-4">
+									  <i class="fas fa-award"></i>
+								   </div>
+								   <div class="timeline-label">
+									   <h2>2nd place in Diversity and inclusion hackathon<span> Feb 2020</span></h2>
+									  <p>
+										Organizer:  honor issuer ShiftKey Labs and Faculty of Computer Science (Dalhousie University)
+										<br>
+										Our team won the second place for presenting Real Align. Real Align is a software that creates a safe engagement platform focused on peer to peer support for people with disabilities to connect with each other. 
+									  </p>
+								   </div>
+								</div>
+							 </article>
+							 <article class="timeline-entry animate-box" data-animate-effect="fadeInLeft">
+								<div class="timeline-entry-inner">
+								   <div class="timeline-icon color-5">
+									  <i class="fas fa-award"></i>
+								   </div>
+								   <div class="timeline-label">
+									   <h2>Awarded the support for attending CAN-CWiC 2019<span> Nov 2019</span></h2>
+									  <p>
+										I was awarded the support by the Culture of Respect Committee in Computer Science (CoReCS) of Dalhousie Faculty of Computer Science to both attend and present a poster in ACM Canadian Celebration of Women in Computing (CAN-CWIC). 
+									  </p>
+								   </div>
+								</div>
+							 </article>
+							 <article class="timeline-entry animate-box" data-animate-effect="fadeInLeft">
+								<div class="timeline-entry-inner">
+								   <div class="timeline-icon color-6">
+									  <i class="fas fa-award"></i>
+								   </div>
+								   <div class="timeline-label">
+									   <h2>Parya Scholarship<span> Nov 2019</span></h2>
+									  <p>
+										Parya Organization.
+										<br>
+										I won the Parya scholarship which is a scholarship for Iranians studying in Canadian post-secondary institutions.
+									  </p>
+								   </div>
+								</div>
+							 </article>
+					         
 					      </div>
 					   </div>
 				   </div>
@@ -1146,11 +1226,19 @@
 									<i class="icon-map"></i>
 								</div>
 								<div class="colorlib-text">
-									<p> playground (439, 440, 441) , Faculty of Computer Science, Dalhousie University
-
+									<p> 4th floor play ground, 
+										<br>
+										Faculty of Computer Science, 
+										<br>
+										Dalhousie University
+										<br>
 										Goldberg Computer Science Building
-										
-										6050 University Avenue, PO BOX 15000, Halifax, NS, Canada B3H 4R2</p>
+										<br>
+										6050 University Avenue, 
+										<br>
+										Halifax, NS, Canada 
+										<br>
+										B3H 4R2</p>
 								</div>
 							</div>
 
@@ -1159,7 +1247,7 @@
 									<i class="icon-phone"></i>
 								</div>
 								<div class="colorlib-text">
-									<p><a href="tel://">+782 414 7447</a></p>
+									<p><a href="tel://">+1 (782) 414-7447</a></p>
 								</div>
 								<br>
 								<br>
