fixed school date

--- a/index.html
+++ b/index.html
@@ -379,12 +379,12 @@
 					               </div>
 
 					               <div class="timeline-label">
-					                  <h2><a href="#">M.S. Computer Science</a> <span>May 2019 – Dec 2020</span></h2>
+					                  <h2><a href="#">M.S. Computer Science</a> <span>May 2019 – April 2021</span></h2>
 					                  <p>Dalhousie University, Halifax, Canada.
 										  <br>
 										  GPA: 4.07 (Out of 4.3), via 12 credit
 										  <br> 
-										  Thesis: Developing a CLI tool for Multi-head and Multi-task learning with deep language models
+										  Thesis title: "MTLV: A Library for Building multi-task learning Architectures"
 										  <br>
 										  <b>Courses:</b>
 										  <ul>
