--- a/index.html
+++ b/index.html
@@ -153,9 +153,10 @@
 									<div class="about-desc">
 										<span class="heading-meta">About Me</span>
 										<h2 class="colorlib-heading">Who Am I?</h2>
-										<p><strong>Hi I'm Fatemeh Rahimi.</strong> I am a Research Assistant who is mainly focusing on Natural language processing projects. </p>
-										<p>I have been in the Computer Science field for about 7 years. In the first 5 years I was mainly focused on software development and after that changed my focus to Data science projects. I am a confident, team player, and motivated researcher in my field. I have listed a selected set of my projects in the PROJECTS section.</p>
-										<p>Currently working on two interesting projects alongside with my thesis. My thesis is mainly focused on building Multi-task learning with State-of-the-art Language models for both bio-medical and general domain text.</p>
+										<p><strong>Hi I'm Fatemeh.</strong> I am currently an NLP Research Assistant at Dalhousie University (Studying Master's of Computer Science) and an NLP research intern at Imagia. </p>
+										<p>My main focus during my research has been on Transformer based pre-trained language models such as BERT, RoBERTa, ELECTRA in different downstream Natural Language Processing (NLP) tasks (Classification, Regression, Summarization, and Information Retrieval). </p>
+										<p>I have been in the Computer Science field for more than seven years. In the first five years I was mainly concentrated on software development and after that changed my focus to data science projects. I am a confident, team player, and motivated researcher in my field. I have listed a selected set of my projects in the PROJECTS section.</p>
+										<p>Currently, I am working on Multi-task learning architectures where the goal is to learn more than one task jointly. I have experience with both general domain and biomedical text contexts. </p>
 									</div>
 								</div>
 							</div>
