--- a/index.html
+++ b/index.html
@@ -448,6 +448,24 @@
 					               </div>
 
 					               <div class="timeline-label">
+					                  <h2><a href="#">NLP researcher (Part-time)</a> <span>Nov 20w0 - now </span></h2>
+									  <p><b><a href="https://www.dal.ca/faculty/computerscience.html">Dalhousie University</a>, Halifax, Canada </b>
+										<ul>
+											<li>Designing CLI tools for using Transformer-baed models in real-world data. </li>
+											<li>Working with Biomedical domain corpus.</li>
+										</ul>
+									  </p>
+					               </div>
+					            </div>
+							 </article>
+					         <article class="timeline-entry animate-box" data-animate-effect="fadeInLeft">
+					            <div class="timeline-entry-inner">
+
+					               <div class="timeline-icon color-1">
+					                  <i class="fas fa-briefcase"></i>
+					               </div>
+
+					               <div class="timeline-label">
 					                  <h2><a href="#">Research Assistant (DL, ML, NLP)</a> <span>March 2019 - now</span></h2>
 									  <p><b><a href="https://www.dal.ca/faculty/computerscience.html">Dalhousie University</a>, Halifax, Canada </b>
 										<ul>
