added imagia url

--- a/index.html
+++ b/index.html
@@ -449,7 +449,7 @@
 
 					               <div class="timeline-label">
 					                  <h2><a href="#">NLP researcher (Part-time)</a> <span>Nov 20w0 - now </span></h2>
-									  <p><b><a href="https://www.dal.ca/faculty/computerscience.html">Dalhousie University</a>, Halifax, Canada </b>
+									  <p><b><a href="https://imagia.com">Imagia</a>, Montreal, Canada </b>
 										<ul>
 											<li>Designing CLI tools for using Transformer-baed models in real-world data. </li>
 											<li>Working with Biomedical domain corpus.</li>
