added stackoverflow profile

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 										<a href="https://github.com/fatemerhmi">
 											<i class="fab fa-github"></i>
 										</a>
-										<a href="https://stackoverflow.com/users/4854008/maktaf">
+										<a href="https://stackoverflow.com/users/4854008/fatemeh-rahimi?tab=profile">
 											<i class="fab fa-stack-overflow"></i>
 										</a>
 										<!-- <a href="https://medium.com/@maktaf">
