--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@
 					               </div>
 
 					               <div class="timeline-label">
-					                  <h2><a href="#">NLP researcher (Part-time)</a> <span>Nov 20w0 - now </span></h2>
+					                  <h2><a href="#">NLP researcher (Part-time)</a> <span>Nov 2020 - now </span></h2>
 									  <p><b><a href="https://imagia.com">Imagia</a>, Montreal, Canada </b>
 										<ul>
 											<li>Designing CLI tools for using Transformer-baed models in real-world data. </li>
@@ -553,7 +553,7 @@
 					                  <h2><a href="#">Practical Data Science Teacher Assistant - CSCI 1109</a> </h2>
 									  <p><b><a href="https://www.dal.ca/faculty/computerscience.html">Dalhousie University</a>, Halifax, Canada </b>
 										<ul>
-											<!-- <li>Sep 2020 - Dec 2020</li> -->
+											<li>Sep 2020 - Dec 2020</li>
 											<li>Jan 2020 – April 2020</li>
 											<li>Sept 2019 – Dec 2019</li>
 											<li>Attend Lab section every week to teach python and data science libraries.</li>
@@ -572,6 +572,7 @@
 					                  <h2><a href="#">Computer C Programming - ENGM1081</a> </h2>
 									  <p><b><a href="https://www.dal.ca/faculty/computerscience.html">Dalhousie University</a>, Halifax, Canada </b>
 										<ul>
+											<li>Sept 2020 – Dec 2020</li>
 											<li>Sept 2019 – Dec 2019</li>
 											<li>Helped Students with debugging and coding their assignments</li>
 										</ul>
