added about thesis

--- a/index.html
+++ b/index.html
@@ -657,7 +657,7 @@
 							<div id="myBtnContainer">
 								<button class="btn active" onclick="filterSelection('all')"> All</button>
 								<button class="btn" onclick="filterSelection('curr')"> Current Projects</button>
-								<button class="btn" onclick="filterSelection('dal')"> DalhousieU Course Projects</button>
+								<button class="btn" onclick="filterSelection('dal')"> DalhousieU Projects</button>
 								<button class="btn" onclick="filterSelection('shiraz')"> ShirazU course Projects</button>
 							</div>
 						</div>
@@ -671,13 +671,14 @@
 										 <i class="fas fa-laptop-code"></i>
 									  </div>
 									  <div class="timeline-label">
-										 <h2><a href="#">Using Multi-task Learning to improve Multi-label classifications task</a><span> March 2020 - now</span> </h2>
+										 <h2><a href="#">MTLV: A Library for Building Multi-task Learning Architectures</a><span> March 2020 - now</span> </h2>
 										 <p><b><a href="https://www.dal.ca/faculty/computerscience.html">Dalhousie University</a>, Halifax, Canada </b>
 										   <ul>
 											   <li>Master’s Thesis</li>
-											   <li>Developing a CLI tool for multi-tasking and multi-head architectures using
-												mostly Python, PyTorch, hugging face libraries, and MLflow.</li>
-											   <li>Using language pre-trained models such as BERT, BioBERT, and Roberta</li>
+											   <li>Developing a CLI tool for exploring four different multi-task learning architectures.</li>
+											   <li>Using language pre-trained models such as BERT, BioBERT, and BlueBERT</li>
+											   <li>propsed a novel approach to cluster task</li>
+											   
 										   </ul>
 										 </p>
 									  </div>
