added defence date

--- a/index.html
+++ b/index.html
@@ -671,13 +671,14 @@
 										 <i class="fas fa-laptop-code"></i>
 									  </div>
 									  <div class="timeline-label">
-										 <h2><a href="#">MTLV: A Library for Building Multi-task Learning Architectures</a><span> March 2020 - now</span> </h2>
+										 <h2><a href="#">MTLV: A Library for Building Multi-task Learning Architectures</a><span> March 2020 - April 2021</span> </h2>
 										 <p><b><a href="https://www.dal.ca/faculty/computerscience.html">Dalhousie University</a>, Halifax, Canada </b>
 										   <ul>
 											   <li>Master’s Thesis</li>
 											   <li>Developing a CLI tool for exploring four different multi-task learning architectures.</li>
 											   <li>Using language pre-trained models such as BERT, BioBERT, and BlueBERT</li>
 											   <li>propsed a novel approach to cluster task</li>
+											   <li>Defence Date: April 20th, 2021</li>
 											   
 										   </ul>
 										 </p>
