added news project

--- a/index.html
+++ b/index.html
@@ -685,6 +685,22 @@
 									  </div>
 								   </div>
 								</article>
+								<article class="timeline-entry animate-box column dal" data-animate-effect="fadeInLeft">
+								   <div class="timeline-entry-inner">
+									  <div class="timeline-icon color-4">
+										 <i class="fas fa-laptop-code"></i>
+									  </div>
+									  <div class="timeline-label">
+										 <h2><a href="#">News Multi-label classification with BERT-family models</a><span> Jan 2021 – Feb 2021</span> </h2>
+										 <p><b><a href="https://www.dal.ca/faculty/computerscience.html">Dalhousie University</a>, Halifax, Canada </b>
+										   <ul>
+											   <li>Developed a CLI tool to train different BERT-family models on real-world data.</li>
+											   <li>Used: Huggingface Transformers, Pytorch, Pandas, sklearn, numpy.</li>							   
+										   </ul>
+										 </p>
+									  </div>
+								   </div>
+								</article>
 								<article class="timeline-entry animate-box column curr" data-animate-effect="fadeInLeft">
 								   <div class="timeline-entry-inner">
 									  <div class="timeline-icon color-1">
