--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 					   				<div class="slider-text-inner js-fullheight">
 					   					<div class="desc">
 						   					<h1 style="color:#cccccc;">Hi! <br>I'm Fatemeh</h1>
-						   					<h2  style="color:#cccccc;">I am currently studying master's of Computer Science in Dalhousie University.</h2>
+						   					<h2  style="color:#cccccc;">I am currently working as an applied research scientist at Imagia.</h2>
 												<p><a class="btn btn-primary btn-learn" style="color:#cccccc;" href="files/FatemehRahimiResume.pdf">Download Resume <i class="icon-download4"></i></a></p>
 											</div>
 					   				</div>
@@ -153,10 +153,10 @@
 									<div class="about-desc">
 										<span class="heading-meta">About Me</span>
 										<h2 class="colorlib-heading">Who Am I?</h2>
-										<p><strong>Hi I'm Fatemeh.</strong> I am currently an NLP Research Assistant at Dalhousie University (Studying Master's of Computer Science) and an NLP research intern at Imagia. </p>
-										<p>My main focus during my research has been on Transformer based pre-trained language models such as BERT, RoBERTa, ELECTRA in different downstream Natural Language Processing (NLP) tasks (Classification, Regression, Summarization, and Information Retrieval). </p>
-										<p>I have been in the Computer Science field for more than seven years. In the first five years I was mainly concentrated on software development and after that changed my focus to data science projects. I am a confident, team player, and motivated researcher in my field. I have listed a selected set of my projects in the PROJECTS section.</p>
-										<p>Currently, I am working on Multi-task learning architectures where the goal is to learn more than one task jointly. I have experience with both general domain and biomedical text contexts. </p>
+										<p><strong>Hi I'm Fatemeh.</strong> I am an applied research scientist at Imagia working mostly on NLP projects. </p>
+										<p> I have experience with Transformer based pre-trained language models such as BERT, RoBERTa, ELECTRA in different downstream Natural Language Processing (NLP) tasks (Classification, Regression, Summarization, Named Entity Recognition, and Information Retrieval). </p>
+										<p> I have been in the Computer Science field for more than seven years. In the first five years I was mainly concentrated on software development and after that changed my focus to data science projects. I am a confident, team player, and motivated researcher in my field. I have listed a selected set of my projects on my personal website. </p>
+										<p> I have experience with both general domain and biomedical text contexts. Also focused on transfer learning, Natural Language Processing (NLP), and deep learning. I am passionate about solving real-world problems with state-of-the-art research in the field. </p>
 									</div>
 								</div>
 							</div>
@@ -256,7 +256,7 @@
 								  <th> &nbsp;<i class="fab fa-python" aria-hidden="true"></i>&nbsp; Python Libraries</th>
 								  <td>PyTorch, Keras, MLflow
 									  <br>
-									  Hugging Face Transformers, NLTK
+									  Hugging Face Transformers, spaCy, NLTK
 									  <br>
 									  NumPy, scikit-learn, pandas, Mathplotlib, jupyter notebooks
 								  </td>
@@ -309,7 +309,11 @@
 								<tr>
 									<th> &nbsp;<i class="fab fa-python" aria-hidden="true"></i>&nbsp; Python Libraries</th>
 									<td>pytest, py2neo, selenium, PyMongo</td>
-								  </tr>
+								</tr>
+								<tr>
+									<th>Cloud</th>
+									<td>&nbsp;<i class="fab fa-docker" aria-hidden="true"></i>&nbsp; Docker</td>
+								</tr>
 								<tr>
 								  <th>Programming platforms</th>
 								  <td>&nbsp;<i class="fab fa-android" aria-hidden="true"></i>&nbsp; Android</td>
@@ -345,10 +349,6 @@
 								  <td>
 									  SPARQL, Protégé
 								  </td>
-								</tr>
-								<tr>
-								  <th>Cloud</th>
-								  <td>&nbsp;<i class="fab fa-docker" aria-hidden="true"></i>&nbsp; Docker</td>
 								</tr>
 								<tr>
 								  <th>HDL</th>
