--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 			<div class="text-center">
 				<div class="author-img" style="background-image: url(images/aboutme.jpg);"></div>
 				<h1 id="colorlib-logo"><a href="index.html">Fatemeh Rahimi</a></h1>
-				<span class="position"><a href="#"></a>NLP/ML Researcher</span>
+				<span class="position"><a href="#"></a>Applied Research Scientist (NLP)</span>
 			</div>
 			<nav id="colorlib-main-menu" role="navigation" class="navbar">
 				<div id="navbar" class="collapse">
