--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@
 					<div class="row">
 						<div class="col-md-12">
 				         <div class="timeline-centered">
-					         <article class="timeline-entry animate-box" data-animate-effect="fadeInLeft">
+							<article class="timeline-entry animate-box" data-animate-effect="fadeInLeft">
 					            <div class="timeline-entry-inner">
 
 					               <div class="timeline-icon color-1">
@@ -448,7 +448,7 @@
 					               </div>
 
 					               <div class="timeline-label">
-					                  <h2><a href="#">NLP researcher (Part-time)</a> <span>Nov 2020 - now </span></h2>
+					                  <h2><a href="#">Applied Research Scientist - NLP (Full-time)</a> <span> May 2021 – Present </span></h2>
 									  <p><b><a href="https://imagia.com">Imagia</a>, Montreal, Canada </b>
 										<ul>
 											<li>Designing CLI tools for using Transformer-baed models in real-world data. </li>
@@ -466,7 +466,25 @@
 					               </div>
 
 					               <div class="timeline-label">
-					                  <h2><a href="#">Research Assistant (DL, ML, NLP)</a> <span>March 2019 - now</span></h2>
+					                  <h2><a href="#">Applied Research Scientist - NLP </a> <span> Nov 2020 – Apr 2021 </span></h2>
+									  <p><b><a href="https://imagia.com">Imagia</a>, Montreal, Canada </b> (Part-time)
+										<ul>
+											<li>Designing CLI tools for using Transformer-baed models in real-world data. </li>
+											<li>Working with Biomedical domain corpus.</li>
+										</ul>
+									  </p>
+					               </div>
+					            </div>
+							 </article>
+					         <article class="timeline-entry animate-box" data-animate-effect="fadeInLeft">
+					            <div class="timeline-entry-inner">
+
+					               <div class="timeline-icon color-1">
+					                  <i class="fas fa-briefcase"></i>
+					               </div>
+
+					               <div class="timeline-label">
+					                  <h2><a href="#">NLP Research Assistant</a> <span>Mar 2019 – Apr 2021</span></h2>
 									  <p><b><a href="https://www.dal.ca/faculty/computerscience.html">Dalhousie University</a>, Halifax, Canada </b>
 										<ul>
 											<li>Using deep language models to solve downstream NLP tasks.</li>
