--- a/index.html
+++ b/index.html
@@ -531,7 +531,7 @@
 										  <br>
 										  This compnay is mostly focused on programming boards(Raspberry Pi) and developing IOT projects. 
 										  <ul>
-											  <li>First started as an intern and then was selected to be the lead training sessions.</li>
+											  <li>First started as an intern and then was selected to lead the training sessions.</li>
 											  <li>Topics included: UNIX vs Linux, file manipulation on terminal, kernel description, file system, shell scripting, system administration and network basics, version controls.</li>
 										  </ul>
 									  </p>
