--- a/index.html
+++ b/index.html
@@ -448,8 +448,8 @@
 					               </div>
 
 					               <div class="timeline-label">
-					                  <h2><a href="#">Applied Research Scientist - NLP (Full-time)</a> <span> May 2021 – Present </span></h2>
-									  <p><b><a href="https://imagia.com">Imagia</a>, Montreal, Canada </b>
+					                  <h2><a href="#">Applied Research Scientist - NLP </a> <span> May 2021 – Present </span></h2>
+									  <p><b><a href="https://imagia.com">Imagia</a>, Montreal, Canada </b> (Full-time)
 										<ul>
 											<li>Designing CLI tools for using Transformer-baed models in real-world data. </li>
 											<li>Working with Biomedical domain corpus.</li>
