--- a/index.html
+++ b/index.html
@@ -692,12 +692,11 @@
 										 <h2><a href="#">MTLV: A Library for Building Multi-task Learning Architectures</a><span> March 2020 - April 2021</span> </h2>
 										 <p><b><a href="https://www.dal.ca/faculty/computerscience.html">Dalhousie University</a>, Halifax, Canada </b>
 										   <ul>
-											   <li>Master’s Thesis</li>
+											   <li>Master’s Thesis, <a href="https://dalspace.library.dal.ca/bitstream/handle/10222/80424/FatemehRahimi2021.pdf?sequence=1">Read here</a>></li>
 											   <li>Developing a CLI tool for exploring four different multi-task learning architectures.</li>
 											   <li>Using language pre-trained models such as BERT, BioBERT, and BlueBERT</li>
 											   <li>propsed a novel approach to cluster task</li>
-											   <li>Defence Date: April 20th, 2021</li>
-											   
+											   <li>Published at <a href="https://dl.acm.org/doi/abs/10.1145/3469096.3474926">DocEng-2021</a></li>
 										   </ul>
 										 </p>
 									  </div>
