--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 			<div class="text-center">
 				<div class="author-img" style="background-image: url(images/aboutme.jpg);"></div>
 				<h1 id="colorlib-logo"><a href="index.html">Fatemeh Rahimi</a></h1>
-				<span class="position"><a href="#"></a>Applied Research Scientist (NLP)</span>
+				<span class="position"><a href="#"></a>Senior NLP Scientist</span>
 			</div>
 			<nav id="colorlib-main-menu" role="navigation" class="navbar">
 				<div id="navbar" class="collapse">
@@ -116,8 +116,8 @@
 					   				<div class="slider-text-inner js-fullheight">
 					   					<div class="desc">
 						   					<h1 style="color:#cccccc;">Hi! <br>I'm Fatemeh</h1>
-						   					<h2  style="color:#cccccc;">I am currently working as an applied research scientist at Imagia.</h2>
-												<p><a class="btn btn-primary btn-learn" style="color:#cccccc;" href="files/FatemehRahimiResume.pdf">Download Resume <i class="icon-download4"></i></a></p>
+						   					<h2  style="color:#cccccc;">I am currently working as a senior applied research scientist (NLP) at Pythonic AI.</h2>
+												<!-- <p><a class="btn btn-primary btn-learn" style="color:#cccccc;" href="files/FatemehRahimiResume.pdf">Download Resume <i class="icon-download4"></i></a></p> -->
 											</div>
 					   				</div>
 					   			</div>
@@ -153,10 +153,11 @@
 									<div class="about-desc">
 										<span class="heading-meta">About Me</span>
 										<h2 class="colorlib-heading">Who Am I?</h2>
-										<p><strong>Hi I'm Fatemeh.</strong> I am an applied research scientist at Imagia working mostly on NLP projects. </p>
-										<p> I have experience with Transformer based pre-trained language models such as BERT, RoBERTa, ELECTRA in different downstream Natural Language Processing (NLP) tasks (Classification, Regression, Summarization, Named Entity Recognition, and Information Retrieval). </p>
-										<p> I have been in the Computer Science field for more than seven years. In the first five years I was mainly concentrated on software development and after that changed my focus to data science projects. I am a confident, team player, and motivated researcher in my field. I have listed a selected set of my projects on my personal website. </p>
-										<p> I have experience with both general domain and biomedical text contexts. Also focused on transfer learning, Natural Language Processing (NLP), and deep learning. I am passionate about solving real-world problems with state-of-the-art research in the field. </p>
+										<p><strong>Hi I'm Fatemeh.</strong> I am a senior NLP scientist at Pythonic AI. </p>
+										<p> I have experience with Transformer based pre-trained language models such as BERT, RoBERTa, ELECTRA and etc in different downstream Natural Language Processing (NLP) tasks (Classification, Regression, Summarization, Named Entity Recognition, and Information Retrieval). </p>
+										<p> I have been in the Computer Science field for more than seven years. In the first five years I was mainly concentrated on software development and after that changed my focus to data science projects. I am a confident, team player, and motivated researcher in my field. I have listed a selected set of my projects here on my personal website. </p>
+										<p> I have experience with both general, biomedical and financial text domain contexts. Also I am focused on transfer learning, Natural Language Processing (NLP), and deep learning. I am passionate about solving real-world problems with state-of-the-art research in the field. </p>
+										<p> For the past 6 month I have been learning and working on multi-modality projects. </p>
 									</div>
 								</div>
 							</div>
@@ -448,11 +449,30 @@
 					               </div>
 
 					               <div class="timeline-label">
-					                  <h2><a href="#">Applied Research Scientist - NLP </a> <span> May 2021 – Present </span></h2>
-									  <p><b><a href="https://imagia.com">Imagia</a>, Montreal, Canada </b> (Full-time)
+					                  <h2><a href="#">Senior NLP Scientist </a> <span> Feb 2022 – Present </span></h2>
+									  <p><b><a href="https://www.pythonic.ai/">Pythonic AI</a>, Milwaukee, Wisconsin, US </b> (Full-time/Remote)
 										<ul>
-											<li>Designing CLI tools for using Transformer-baed models in real-world data. </li>
-											<li>Working with Biomedical domain corpus.</li>
+											<li>Research around Document Understanding and multi-modality</li>
+										</ul>
+									  </p>
+					               </div>
+					            </div>
+							</article>
+							<article class="timeline-entry animate-box" data-animate-effect="fadeInLeft">
+					            <div class="timeline-entry-inner">
+
+					               <div class="timeline-icon color-1">
+					                  <i class="fas fa-briefcase"></i>
+					               </div>
+
+					               <div class="timeline-label">
+					                  <h2><a href="#">Applied Research Scientist - NLP </a> <span> May 2021 – Jan 2022 </span></h2>
+									  <p><b><a href="https://imagia.com">Imagia</a>, Montreal, Canada </b> (Full-time/Remote)
+										<ul>
+											<li>Performed research on hospital clinical reports</li>
+											<li>Worked across development and research team</li>
+											<li>contributed to deidentification development and research stack</li>
+											<li>Researched around Named entity recognition and measurement extraction with rule-based and SOTA language models</li>
 										</ul>
 									  </p>
 					               </div>
@@ -467,7 +487,7 @@
 
 					               <div class="timeline-label">
 					                  <h2><a href="#">Applied Research Scientist - NLP </a> <span> Nov 2020 – Apr 2021 </span></h2>
-									  <p><b><a href="https://imagia.com">Imagia</a>, Montreal, Canada </b> (Part-time)
+									  <p><b><a href="https://imagia.com">Imagia</a>, Montreal, Canada </b> (Part-time/Remote)
 										<ul>
 											<li>Designing CLI tools for using Transformer-baed models in real-world data. </li>
 											<li>Working with Biomedical domain corpus.</li>
